--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sales-dashboard",
-  "version": "1.0.0",
+  "name": "gbs-sales-dashboard",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
